Developement
	Bump QuickTime emulation to 7.6.4
	Fix new apple HD trailers, where trailers is downloaded from the menu
	Use correct controlid with launching some apple.com HD videos
	For apple.com videos change movies.apple.com to www.apple.com
	Fix compile with libxul 1.9.2 and higher
	Fix crash on http://itunes.apple.com/us/album/endangered-species-live-at-abbey/id309810246
	Support the qtnext parameter
	Rework code to work better with xulrunner 1.9.2
	Use preferred player in all launch cases
	Add support for VLC plugin emulation
	Add new mimetype video/x-ms-asx
	Allow for configurable backend (fosfor or gnome-mplayer or something else)
	Make dom event javascript a little more unique
	React to Network Errors in DestroyStream differently
	Added /DEBUG path for debugging purposes
	Added ListDump dbus method
	konqueror patch from Christian.Morales.Vega
	plugin-dir patch from Christian.Morales.Vega
0.9.8
	When cancelling a stream (USER_BREAK) and the cancelled one is streaming
		don't automatically load the next item on the playlist
	When stream->lastmodified == 0 mark stream as streaming
		fixes http://www.radioswissclassic.ch/en
	Various fixes from the mailing list
	Version bump
	Add in new type of qt parser, make videos at PBS.org work
	Move on to the next item in the playlist, when the an open item gives an error
	Fix the autostart property when then plugin window is hidden
	Only emulate QuickTime with the qt plugin
	Change the user agent to "QuickTime/7.6.2" while the plugin is loaded, makes Apple.com/trailers work again
0.9.7
	Clean up code with 'make indent'
	Added a RAM parser
	Added Czech translation by Petr Pisar
	Add Dutch translation
	Add in check for GIO, enables functionality in libgmlib
	Remove need for LIBTOOL, program should compile cleaner now
	Patch to correct --as-needed linker flag
0.9.6
	Fix constant issue with old xulrunner kits
	Update GUI while cache is loading
	Make Copy Location get the entire url